src2/objects/Case_Reason__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Breadcrumb_Code__c</fullName>
        <label>Breadcrumb Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Breadcrumb__c</fullName>
        <label>Breadcrumb</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Reason_UUID__c</fullName>
        <externalId>true</externalId>
        <label>Case Reason UUID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <externalId>true</externalId>
        <label>Code</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Cause__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Cause</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Reason__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Reason</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Language_Key_Code__c</fullName>
        <label>Language Key Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Language_Code</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Level_Name__c</fullName>
        <label>Level Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marker_Code__c</fullName>
        <label>Marker Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent</label>
        <referenceTo>Case_Reason__c</referenceTo>
        <relationshipLabel>Case Reasons</relationshipLabel>
        <relationshipName>Case_Reasons</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Org_Code__c</fullName>
        <label>Sales Organization</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Sales_Organization</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Selectable__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Selectable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Global Reason</fullName>
                </value>
                <value>
                    <fullName>Local Reason</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Case Reason</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Cause_Qualification</fullName>
        <columns>NAME</columns>
        <columns>Case_Reason_UUID__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Is_Cause__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Cause Qualification</label>
    </listViews>
    <listViews>
        <fullName>Purpose_of_Contact</fullName>
        <columns>NAME</columns>
        <columns>Breadcrumb_Code__c</columns>
        <columns>Breadcrumb__c</columns>
        <columns>Case_Reason_UUID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Is_Reason__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Purpose of Contact</label>
    </listViews>
    <nameField>
        <label>Case Reason Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Case Reasons</pluralLabel>
    <recordTypes>
        <fullName>Global_Reason</fullName>
        <active>true</active>
        <label>Global Reason</label>
    </recordTypes>
    <recordTypes>
        <fullName>Local_Reason</fullName>
        <active>true</active>
        <label>Local Reason</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>